k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    kubernetes.io/metadata.name: vijay-gratitude
  name: vijay-gratitude
