k8s/api-gateway-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-gateway-deployment
  namespace: vijay-gratitude
spec:
  replicas: 1
  selector:
    matchLabels:
      component: api-gateway
  template:
    metadata:
      labels:
        component: api-gateway
    spec:
      containers:
        - name: api-gateway
          image: 975050024946.dkr.ecr.eu-central-1.amazonaws.com/capstone-g3-gratitude/api-gateway:v1.0.0-vijay
          imagePullPolicy: Always
          ports:
            - containerPort: 5000
