k8s/client-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-deployment
  namespace: vijay-gratitude
spec:
  replicas: 1
  selector:
    matchLabels:
      component: web
  template:
    metadata:
      labels:
        component: web
    spec:
      containers:
        - name: client
          image: 975050024946.dkr.ecr.eu-central-1.amazonaws.com/capstone-g3-gratitude/client:v1.0.0-vijay
          ports:
            - containerPort: 3000
