k8s/entries-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: entries-deployment
  namespace: vijay-gratitude
spec:
  replicas: 1
  selector:
    matchLabels:
      component: entries
  template:
    metadata:
      labels:
        component: entries
    spec:
      containers:
        - name: entries
          image: 975050024946.dkr.ecr.eu-central-1.amazonaws.com/capstone-g3-gratitude/entries:v1.0.0-vijay
          imagePullPolicy: Always
          ports:
            - containerPort: 50051
