k8s/moods-api-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: moods-api-deployment
  namespace: vijay-gratitude
spec:
  replicas: 1
  selector:
    matchLabels:
      component: moods-api
  template:
    metadata:
      labels:
        component: moods-api
    spec:
      containers:
        - name: moods-api
          image: prashantdey/merndemoapp:moodsapiv1.0
          ports:
            - containerPort: 5002
