k8s/server-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server-deployment
  namespace: vijay-gratitude
spec:
  replicas: 1
  selector:
    matchLabels:
      component: server
  template:
    metadata:
      labels:
        component: server
    spec:
      containers:
        - name: server
          image: 975050024946.dkr.ecr.eu-central-1.amazonaws.com/capstone-g3-gratitude/server:v1.0.0-vijay
          imagePullPolicy: Always
          ports:
            - containerPort: 5001
