k8s/stats-api-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stats-api-deployment
  namespace: vijay-gratitude
spec:
  replicas: 1
  selector:
    matchLabels:
      component: stats-api
  template:
    metadata:
      labels:
        component: stats-api
    spec:
      containers:
        - name: stats-api
          image: prashantdey/merndemoapp:statsapiv1.0
          ports:
            - containerPort: 5003
