k8s/stats-service-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stats-service-deployment
  namespace: vijay-gratitude
spec:
  replicas: 1
  selector:
    matchLabels:
      component: stats-service
  template:
    metadata:
      labels:
        component: stats-service
    spec:
      containers:
        - name: stats-service
          image: 975050024946.dkr.ecr.eu-central-1.amazonaws.com/capstone-g3-gratitude/stats-service:v1.0.0-vijay
          imagePullPolicy: Always
          ports:
            - containerPort: 50053
