k8s/api-gateway-cluster-ip-service.yml
apiVersion: v1
kind: Service
metadata:
  name: api-gateway-cluster-ip-service
  namespace: vijay-gratitude
spec:
  type: ClusterIP
  selector:
    component: api-gateway
  ports:
    - port: 5000
      targetPort: 5000
