k8s/entries-cluster-ip-service.yml
apiVersion: v1
kind: Service
metadata:
  name: entries-cluster-ip-service
  namespace: vijay-gratitude
spec:
  type: ClusterIP
  selector:
    component: entries
  ports:
    - port: 50051
      targetPort: 50051
