k8s/server-cluster-ip-service.yml
apiVersion: v1
kind: Service
metadata:
  name: server-cluster-ip-service
  namespace: vijay-gratitude
spec:
  type: ClusterIP
  selector:
    component: server
  ports:
    - port: 5001
      targetPort: 5001
